<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_bible_book"
            android:icon="@mipmap/biblebook"
            android:title="@string/bible_book" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@mipmap/quiz"
            android:title="@string/quiz" />
        <item
            android:id="@+id/nav_song_book"
            android:icon="@mipmap/songbook"
            android:title="@string/song_book" />
        <item
            android:id="@+id/nav_elibary"
            android:icon="@mipmap/ebooks"
            android:title="@string/elibary" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@mipmap/articles"
            android:title="@string/articles" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

        </menu>
    </item>

</menu>
